kustomize/nexus/overlays/prod/httproute-patch.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nexus-repo
spec:
  hostnames:
    - "nexus.local"
  rules:
    - backendRefs:
        - name: nexus-repo
          port: 80
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: crowdsec-bouncer
